# codingchallenges

./: .gitignore  README.md
huffman_encoding/: README.md  WORKSPACE.bazel  __init__.py  setup.py
huffman_encoding/bazel-bin/src/: main_binary.exe-0.params  main_binary.temp
huffman_encoding/bazel-bin/test/: huffman_test.exe.runfiles_manifest  huffman_test.temp  huffman_test.zip-0.params
huffman_encoding/bazel-huffman_encoding/: README.md  WORKSPACE.bazel
huffman_encoding/bazel-huffman_encoding/bazel-out/: stable-status.txt
huffman_encoding/bazel-huffman_encoding/bazel-out/x64_windows-fastbuild/testlogs/test/huffman_test/: test.cache_status
huffman_encoding/bazel-huffman_encoding/src/main/: main.py
huffman_encoding/bazel-huffman_encoding/src/models/: BUILD.bazel  models.py
huffman_encoding/bazel-huffman_encoding/test/: BUILD.bazel  test_main.py
huffman_encoding/bazel-out/: volatile-status.txt
huffman_encoding/bazel-testlogs/test/huffman_test/: test.xml
huffman_encoding/src/: main.py
huffman_encoding/src/main/: BUILD.bazel  main.py
huffman_encoding/test/: test_main.py
load_balancer/: BUILD.bazel  README.md  WORKSPACE.bazel
load_balancer/src/server3/: index.html
url_shortening/: README.md  __init__.py  setup.py
url_shortening/src/: __init__.py  controller.py  url_shortener.py
wc/: README.md  __init__.py  launch.json  setup.cfg  setup.py
wc/src/: __init__.py  ccwc.py  doc.md  main.py
wc/tests/: ccwc_test.py
